[package]
name = "cim-security"
version = "0.1.0"
edition = "2021"
authors = ["The Cowboy AI"]
description = "Core security abstractions for CIM - cryptography, claims, and secrets management"
license = "MIT OR Apache-2.0"
repository = "https://github.com/thecowboyai/alchemist"
keywords = ["security", "cryptography", "claims", "authentication", "cim"]
categories = ["cryptography", "authentication"]

[dependencies]
# Async runtime
async-trait = "0.1"
tokio = { version = "1.43", features = ["sync"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "2.0"

# Collections
dashmap = "6.1"

# Logging
tracing = "0.1"

# UUID generation
uuid = { version = "1.11", features = ["v4", "serde"] }

[dev-dependencies]
tokio = { version = "1.43", features = ["full", "test-util"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
mockall = "0.13"
